; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_config_int.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_config_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, %struct.TYPE_8__*, i32*, i32, i32, i32, %struct.TYPE_9__*, %struct.TYPE_9__*, i8*, i32, i32)* @config_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @config_int(i32** %0, %struct.TYPE_8__* %1, i32* %2, i32 %3, i32 %4, i32 %5, %struct.TYPE_9__* %6, %struct.TYPE_9__* %7, i8* %8, i32 %9, i32 %10) #0 {
  %12 = alloca i32**, align 8
  %13 = alloca %struct.TYPE_8__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca %struct.TYPE_9__*, align 8
  %19 = alloca %struct.TYPE_9__*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i32** %0, i32*** %12, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %13, align 8
  store i32* %2, i32** %14, align 8
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i32 %5, i32* %17, align 4
  store %struct.TYPE_9__* %6, %struct.TYPE_9__** %18, align 8
  store %struct.TYPE_9__* %7, %struct.TYPE_9__** %19, align 8
  store i8* %8, i8** %20, align 8
  store i32 %9, i32* %21, align 4
  store i32 %10, i32* %22, align 4
  %23 = load i32, i32* %15, align 4
  %24 = call i32 @msg_hash_to_str(i32 %23)
  %25 = load i32, i32* %16, align 4
  %26 = call i32 @msg_hash_to_str(i32 %25)
  %27 = load i32*, i32** %14, align 8
  %28 = load i32, i32* %17, align 4
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %18, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %19, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i8*, i8** %20, align 8
  %36 = load i32, i32* %21, align 4
  %37 = load i32, i32* %22, align 4
  %38 = call i32 @setting_int_setting(i32 %24, i32 %26, i32* %27, i32 %28, i32 %31, i32 %34, i8* %35, i32 %36, i32 %37, i32 0)
  %39 = load i32**, i32*** %12, align 8
  %40 = load i32*, i32** %39, align 8
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %42, align 4
  %45 = sext i32 %43 to i64
  %46 = getelementptr inbounds i32, i32* %40, i64 %45
  store i32 %38, i32* %46, align 4
  %47 = load i32**, i32*** %12, align 8
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %49 = load i32, i32* %15, align 4
  %50 = call i32 @MENU_SETTINGS_LIST_CURRENT_ADD_ENUM_IDX_PTR(i32** %47, %struct.TYPE_8__* %48, i32 %49)
  %51 = load i32**, i32*** %12, align 8
  %52 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %53 = load i32, i32* %16, align 4
  %54 = call i32 @MENU_SETTINGS_LIST_CURRENT_ADD_ENUM_VALUE_IDX(i32** %51, %struct.TYPE_8__* %52, i32 %53)
  ret void
}

declare dso_local i32 @setting_int_setting(i32, i32, i32*, i32, i32, i32, i8*, i32, i32, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1

declare dso_local i32 @MENU_SETTINGS_LIST_CURRENT_ADD_ENUM_IDX_PTR(i32**, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @MENU_SETTINGS_LIST_CURRENT_ADD_ENUM_VALUE_IDX(i32**, %struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
